force-app/main/default/objects/BUYERORDER__x/BUYERORDER__x.object-meta.xml
<CustomObject>
    <description>BUYERORDER</description>
    <externalDataSource>testSnowflake</externalDataSource>
    <externalName>TESTDB.MYSCHEMA.BUYERORDER</externalName>
    <label>BUYERORDER</label>
    <pluralLabel>BUYERORDER</pluralLabel>
</CustomObject>