force-app/main/default/objects/BUYERORDER__x/fields/ACCOUNTID__c.field-meta.xml
<CustomField>
    <fullName>ACCOUNTID__c</fullName>
    <externalDeveloperName>ACCOUNTID</externalDeveloperName>
    <label>ACCOUNTID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>