force-app/main/default/objects/BUYERORDER__x/fields/BID__c.field-meta.xml
<CustomField>
    <fullName>BID__c</fullName>
    <externalDeveloperName>BID</externalDeveloperName>
    <label>BID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>