force-app/main/default/objects/BUYERORDER__x/fields/BUYERADDRESS__c.field-meta.xml
<CustomField>
    <fullName>BUYERADDRESS__c</fullName>
    <externalDeveloperName>BUYERADDRESS</externalDeveloperName>
    <label>BUYERADDRESS</label>
    <length>25</length>
    <type>Text</type>
</CustomField>