force-app/main/default/objects/BUYERORDER__x/fields/BUYERNAME__c.field-meta.xml
<CustomField>
    <fullName>BUYERNAME__c</fullName>
    <externalDeveloperName>BUYERNAME</externalDeveloperName>
    <label>BUYERNAME</label>
    <length>25</length>
    <type>Text</type>
</CustomField>