force-app/main/default/objects/BUYERORDER__x/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <externalDeveloperName>ID</externalDeveloperName>
    <label>ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>