force-app/main/default/objects/BUYERORDER__x/fields/PAYMENTSTATUS__c.field-meta.xml
<CustomField>
    <fullName>PAYMENTSTATUS__c</fullName>
    <externalDeveloperName>PAYMENTSTATUS</externalDeveloperName>
    <label>PAYMENTSTATUS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>