force-app/main/default/objects/BUYERORDER__x/fields/PRICE__c.field-meta.xml
<CustomField>
    <fullName>PRICE__c</fullName>
    <externalDeveloperName>PRICE</externalDeveloperName>
    <label>PRICE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>