force-app/main/default/objects/BUYERORDER__x/fields/QUANTITY__c.field-meta.xml
<CustomField>
    <fullName>QUANTITY__c</fullName>
    <externalDeveloperName>QUANTITY</externalDeveloperName>
    <label>QUANTITY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>